--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,23 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         PBS-Logs
-version:      0.04
-version_from: lib/PBS/Logs.pm
-installdirs:  site
+--- #YAML:1.0
+name:               PBS-Logs
+version:            0.05
+abstract:           general parser for PBS log files
+author:
+    - Dr R K Owen <rkowen@nersc.gov>
+license:            lgpl
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
 requires:
-    Carp:                          0
-    Time::Local:                   0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+    Carp:         0
+    Time::Local:  0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.55_02
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
